--- a/Index.html
+++ b/Index.html
@@ -33,14 +33,14 @@ Eid arab ref: <a href='https://www.freepik.com/free-vector/blue-eid-mubarak-back
         </nav>
 
     </header>
-    <secton id="showcase">
+    <section id="showcase">
         <div class="container">
             <div class="img-div">
                 <h2>A Day Worthy Of Celebration</h2>
                 <p>It is the a festival where muslim brothers and sisters get together at the mosque</p>
             </div>
         </div>
-    </secton>
+    </section>
     <section id="main">
         <div class="container">
             <div class="content">
